--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                     </summary>
                     <ul>
                         <li>
-                            <p>Oscar is a Brisbane based composer, sound-designer and musician who creates original music and sound for games,films, and theatre. He enjoys working in creative and non-conventional ways, in order to represent the true character of a work.</p>
-                            
-                            <p> Oscar graduated from Queensland University of Technology with a Bachelor of Music (With Distinction), Majoring in Music and Sound production with a mixed minor focussing on sound design and interaction.</p>
-                        </li>
+                            <p>Hello, I'm Oscar, a Brisbane based composer, sound-designer and musician who creates original music and sound for games,films, and theatre. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
+                             
+                            <p>I'm always striving to bring life to media through detailed and thoughtful audio. I'm passionate about creating cohesive and rich sounds which enhance the listener's experience and their connection to the work.</p>
+
+                            <p> I graduated from QUT with a Bachelor of Music (With Distinction), Majoring in Music and Sound production with a mixed minor focussing on sound design and interaction. I've enjoyed working on animations, films, and games in all kinds of styles.</p> </li>
                     </ul>
                 </details>
                 <details>
