--- a/index.html
+++ b/index.html
@@ -31,23 +31,30 @@
                             <p> I hold a Bachelor of Music (With Distinction) from QUT, Majoring in Music and Sound Production with a mixed minor focussing on sound design and interaction. I've enjoyed working on animations, films, and games in all kinds of styles.</p> </li>
                     </ul>
                 </details>
-                <details>
+                <details open='true'>
                     <summary>
                         <span class='clickable'>// ✨ New and Exciting //</span>
                     </summary>
                     <ul>
+                         <li>
+                            <details open='true'>
+                                <summary>
+                                    <span class = "clickable">👻 Soul Air</span>
+                                </summary>
+                                <ul>
+                                    <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out!</p> 
+                                     <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe></p>
+                                </ul>
+                            </details>
+                        </li>
                         <li>
-                            <li><p>🗻 Wandering in Rambley Valley</p></li>
-                            <li class="pics">
-                                        <img src="images/WIRV/WIRV01.gif" alt="">
-                                        <img src="images/WIRV/WIRV03.gif" alt="">
-                                        <img src="images/WIRV/WIRV02.gif" alt="">
-                                        <img src="images/WIRV/WIRV05.gif" alt="">
-                                        <img src="images/WIRV/WIRV04.gif" alt="">
-                            </li>
-                            <p>A first person game made in Unity where you wander around and listen to the intereting stories told by the people hanging around.</p> 
-                            <p><a href='https://oscarj.itch.io/wandering-in-rambley-valley' class='clickable'>[Play it!]</a>
-                            <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>
+                            <details open='true'>
+                                <summary>
+                                    <span class = "clickable">🗻 Wandering in Rambley Valley Music!</span>
+                                </summary>
+                                <ul>
+                                    <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>                                </ul>
+                            </details>
                         </li>
                     </ul>
                 </details>
@@ -56,6 +63,17 @@
                       <span class='clickable'>// 👾 games //</span>
                     </summary>
                     <ul>
+                        <li>
+                            <details>
+                                <summary>
+                                    <span class = "clickable">👻 Soul Air</span>
+                                </summary>
+                                <ul>
+                                    <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out!</p> 
+                                     <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe></p>
+                                </ul>
+                            </details>
+                        </li>
                         <li>
                             <details>
                                 <summary>
