--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <span class = "clickable">👻 Soul Air</span>
                                 </summary>
                                 <ul>
-                                    <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out!</p> 
+                                    <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out! Play below (even on your phone 😎)</p> 
                                     <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe></p>
                                 </ul>
                             </details>
