--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                              
                             <p>I'm always striving to bring life to media through detailed and thoughtful audio. I'm passionate about creating cohesive and rich sounds which enhance the listener's experience and their connection to the work.</p>
 
-                            <p> I hold a Bachelor of Music (With Distinction) from QUT, Majoring in Music and Sound Production with a mixed minor focussing on sound design and interaction. I've enjoyed working on animations, films, and games in all kinds of styles.</p> </li>
+                            <p> I hold a Bachelor of Music (With Distinction) from QUT, Majoring in Music and Sound Production with a mixed minor focussing on sound design and interaction. I've enjoyed working on animations, films, and games in all kinds of styles.</p> 
+                        </li>
                     </ul>
                 </details>
                 <details open='true'>
@@ -42,8 +43,10 @@
                                     <span class = "clickable">👻 Soul Air</span>
                                 </summary>
                                 <ul>
-                                    <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out! Play below (even on your phone 😎)</p> 
-                                    <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe></p>
+                                    <li>
+                                        <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out! Play below (even on your phone 😎)</p> 
+                                        <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe></p>
+                                    </li>
                                 </ul>
                             </details>
                         </li>
@@ -53,7 +56,10 @@
                                     <span class = "clickable">🗻 Wandering in Rambley Valley Music!</span>
                                 </summary>
                                 <ul>
-                                    <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>                                </ul>
+                                    <li>
+                                        <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>                                </ul>
+                                    </li>
+                                </ui>
                             </details>
                         </li>
                     </ul>
