--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Oscar Jemmott</h1>
             <p>Music and Sound for Media</p>
             <div class="content">
-                <details open='true'>
+                <details open='false'>
                     <summary>
                         <span class='clickable'>// 📝 about //</span>
                     </summary>
@@ -490,9 +490,6 @@
                         </li>
                     </ul>
                 </details>
-                
-                <a href="https://oscarno.notion.site/oscarno/08b1f44a4e8a4707acdb54546aeee764?v=2e0b29cb229d4dbeaabe91c06c60e442" class="clickable">// 🧾 Blog //</a> 
-                <p></p>
                 <div class="links">
                     //<address><a href="mailto:oscarj.sounds@gmail.com" class='clickable'> ✉️ </a></address>//<a href="https://www.twitter.com/oscarno_" class="clickable"> 🦜 </a> //<a href="https://www.instagram.com/oscarno_/" class="clickable"> 📷 </a>//
                 </div>
