--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     </ul>
                 </details>
                 <div class="links">
-                    //<address><a href="mailto:oscarj.sounds@gmail.com" class='clickable'> ✉️ </a></address>//<a href="https://www.twitter.com/oscarno_" class="clickable"> 🦜 </a> //<a href="https://www.instagram.com/oscarno_/" class="clickable"> 📷 </a>//
+                    //<address><a href="mailto:oscarj.sounds@gmail.com" class='clickable'> ✉️ </a></address>//<a href="https://www.twitter.com/oscarno_" class="clickable"> 🦜 </a> //<a href="https://www.instagram.com/oscarno_/" class="clickable"> 📷 </a>//<a rel="me" href="https://mastodon.social/@oscarno" class="clickable">🦣</a> //
                 </div>
                 <footer><p>// code by me :) // (c) Oscar Jemmott, 2019 //</p></footer>
             </div>
