--- a/showreel.html
+++ b/showreel.html
@@ -42,16 +42,42 @@
                         </li>
                         <li>
                             <h2>// 👞 Sound Design Showreel //</h2>
-                            <p>*Sound Design Video Goes here*</p>
+                            <ul>
+                                <li>
+                                    <p>*Sound Design Video Goes here*</p>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <h2>// 🪐 Sumorbit Music Showcase //</h2>
-                            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/nO7N8BRDz6A?si=lDeuF0mv5m5pCPKE&amp;start=223" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                            <ul>
+                                <li>
+                                    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/nO7N8BRDz6A?si=lDeuF0mv5m5pCPKE&amp;start=223" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <h2>// 🗻 Wandering in Rambley Valley Music //</h2>
-                            <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>
-                                </ui>
+                            <h2>// 💯 To Share //</h2>
+                                <ul>
+                                    <li>
+                                        <p>A project in which I composed 100 short pieces. Making one (almost) every day from July - November of 2018, sharing them on Twitter and Instagram.</p>
+                                    </li>
+                                    <li>
+                                        <iframe style="border: 0; width: 600px; height:472px;" src="https://bandcamp.com/EmbeddedPlayer/album=520952754/size=large/bgcol=fafafa/linkcol=de270f/artwork=small/transparent=true/" seamless><a href="http://oscarno.bandcamp.com/album/to-share">To Share by @oscarno_</a></iframe>
+                                    </li>
+                                </ul>
+                            </li>
+                        <li>
+                            <h2>// 🗻 Wandering in Rambley Valley //</h2>
+                            <ul>
+                                <li>
+                                        <p>A self directed 1st person game focused on exploring Unity's audio functionality.</p>
+                                    </li>
+                                <li>
+                                    <p><iframe style="border: 0; width: 1 00%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>       
+                                </li>
+                            </ul>
+
                             </details>
                         </li>
                     </ul>
