Added Hitting a brickwall & embed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Oscar Jemmott</h1>
             <p>Music and Sound for Media</p>
             <div class="content">
-                <details>
+                <details open='true'>
                     <summary>
                         <span class='clickable'>// 📝 about //</span>
                     </summary>
@@ -69,6 +69,17 @@
                       <span class='clickable'>// 👾 games //</span>
                     </summary>
                     <ul>
+                        <li>
+                            <details>
+                                <summary>
+                                    <span class = "clickable">🧱 Hitting a Brick Wall</span>
+                                </summary>
+                                <ul>
+                                    <p>A small game about work and it's payoff.</p> 
+                                     <p><iframe allowfullscreen="true" src="https://html-classic.itch.zone/html/11941687/BrickWall0.3.1/index.html" allowtransparency="true" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" id="game_drop" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr; cross-origin-isolated; web-share" frameborder="0"></iframe></p>
+                                </ul>
+                            </details>
+                        </li>
                         <li>
                             <details>
                                 <summary>
