Bio, +SumOrbit, +BrickWall

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     </summary>
                     <ul>
                         <li>
-                            <p>Hello, I'm Oscar, a Brisbane based composer, sound-designer and musician who creates original music and sound for games,films, and theatre. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
+                            <p>Hello, I'm Oscar, a Brisbane based audio designer who creates original music and sound for games, films, and theatre. I enjoy working in creative and non-conventional ways, in order to represent the essential character of a work.</p>
                              
-                            <p>I'm always striving to bring life to media through detailed and thoughtful audio. I'm passionate about creating cohesive and rich sounds which enhance the listener's experience and their connection to the work.</p>
+                            <p>Collaboration is an integral part of my practise. I always strive to work closely with others to understand, develop and enhance the core of each project I'm involved with. </p>
 
                             <p> I hold a Bachelor of Music (With Distinction) from QUT, Majoring in Music and Sound Production with a mixed minor focussing on sound design and interaction. I've enjoyed working on animations, films, and games in all kinds of styles.</p> 
                         </li>
@@ -45,7 +45,7 @@
                                 <ul>
                                     <li>
                                         <p>An arcade style PICO-8 game. Play as a ghost retrieving their soul before time runs out! Play below (even on your phone 😎)</p> 
-                                        <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="621" height="513" style="border:none; overflow:hidden"></iframe></p>
+                                        <p><iframe src="https://www.lexaloffle.com/bbs/widget.php?pid=soulair" allowfullscreen width="600" height="600"style="border:none; overflow:hidden"></iframe></p>
                                     </li>
                                 </ul>
                             </details>
@@ -57,7 +57,7 @@
                                 </summary>
                                 <ul>
                                     <li>
-                                        <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>                                </ul>
+                                        <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>
                                     </li>
                                 </ui>
                             </details>
@@ -69,6 +69,18 @@
                       <span class='clickable'>// 👾 games //</span>
                     </summary>
                     <ul>
+                         <li>
+                            <details>
+                                <summary>
+                                    <span class = "clickable">🪐 SumOrbit</span>
+                                </summary>
+                                <ul>
+                                    <p>A mid-century moog inspired soundtrack for an interplanetary brawler developed by Jett Williams</p> 
+                                    <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/-eYlGgY5tcE?si=_Ui5jYN2TdT8z5cM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                   <iframe src="https://store.steampowered.com/widget/1653190/?t=I%20made%20music%20for%20this%20game!" frameborder="0" width=100% height="190"></iframe>
+                                </ul>
+                            </details>
+                        </li>
                         <li>
                             <details>
                                 <summary>
@@ -76,7 +88,8 @@
                                 </summary>
                                 <ul>
                                     <p>A small game about work and it's payoff.</p> 
-                                     <p><iframe allowfullscreen="true" src="https://html-classic.itch.zone/html/11941687/BrickWall0.3.1/index.html" allowtransparency="true" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" id="game_drop" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr; cross-origin-isolated; web-share" frameborder="0"></iframe></p>
+                                    <iframe style="width: 480px; height: 432px" allowfullscreen="true" src="https://html-classic.itch.zone/html/11941687/BrickWall0.3.1/index.html" allowtransparency="true" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" id="game_drop" allow="autoplay; fullscreen *; geolocation; microphone; camera; midi; monetization; xr-spatial-tracking; gamepad; gyroscope; accelerometer; xr; cross-origin-isolated; web-share" frameborder="0"></iframe>
+                                    <p>Controls: <br>Move = Left/Right Arrow Keys<br>Hammer = Spacebar<br>Screenshake Toggle = X key</p>
                                 </ul>
                             </details>
                         </li>
@@ -104,7 +117,7 @@
                                         <img src="images/WIRV/WIRV05.gif" alt="">
                                         <img src="images/WIRV/WIRV04.gif" alt="">
                                     </li>
-                                    <p>A first person game made in Unity where you wander around and listen to the intereting stories told by the people hanging around.</p> 
+                                    <p>A first person game made in Unity where you wander around and listen to the stories told by the people hanging around.</p> 
                                     <p><a href='https://oscarj.itch.io/wandering-in-rambley-valley' class='clickable'>[Play it!]</a>
                                      <p><iframe style="border: 0; width: 100%; height: 310px;" src="https://bandcamp.com/EmbeddedPlayer/album=560484489/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="https://oscarno.bandcamp.com/album/wandering-in-rambley-valley-original-soundtrack">Wandering In Rambley Valley Original Soundtrack by @oscarno_</a></iframe></p>
                                 </ul>
@@ -149,7 +162,7 @@
 
                 <details>
                     <summary>
-                        <span class='clickable'>// 🎼 scores //</span>
+                        <span class='clickable'>// 🎬 film //</span>
                     </summary>
                     <ul>
                         <li>
@@ -286,9 +299,83 @@
                             </details>
                         </li>
                         <li>
+                             <details>
+                    <summary>
+                      <span class='clickable'>// 🔊 sound design //</span>
+                    </summary>
+                    <ul>
+                        <li>
                             <details>
                                 <summary>
-                                  <span class='clickable'>⤵️ Older Work</span>
+                                    <span class='clickable'>🧟‍♂️ Zombie Bro</span>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>A feature length film which documents the life of a young girl as she watches her brother slowly infect the entire world with a zombie virus.</p>
+                                        <p><em>Dir: May Grehan, 2019</em></p>
+                                    </li>
+                                    <li class="pics">
+                                        <img src='images/ZB/zb1.gif' alt="">
+                                        <img src='images/ZB/zb2.gif' alt="">
+                                        <img src='images/ZB/zb3.gif' alt="">
+                                    </li>
+                                    <li>
+                                        <iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/566399100&color=%23d685b1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                                    </li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <summary>
+                                    <span class='clickable'>🐈 Sweep</span>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>An endearing animated short in which a young chimney sweep must retrieve a lost cat.</p>
+                                        <p><em>Dir: Keeley Kirshaw, 2017</em></p>
+                                    </li>
+                                    <li>    
+                                        <iframe src="https://player.vimeo.com/video/247899825" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                                    </li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <summary>
+                                    <span class='clickable'>🌳 Hunter</span>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>A short film about the adventures of a young boy who finds a friend.</p>
+                                        <p><em>Dir: Sam Graydon, 2016</em></p>
+                                    </li>
+                                    <li><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/567498327&color=%23769fc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></li>
+                                </ul>
+                            </details>
+                        <!-- </li>
+                         <li>
+                            <details>
+                                <summary>
+                                    <span class='clickable'>📦 Unity Project</span>
+                                </summary>
+                                <ul>
+                                    <li>
+                                        <p>A demo Unity project outfitted with custom sound effects.</p>
+                                        <p><em>Prefabs + Scripts provided, Sound Design + Implementation by me</em></p>
+                                    </li>
+                                    <li><a href='https://oscarj.itch.io/unity-sound-design-demo' class="clickable">[Play It]</a></li>
+                                </ul>
+                            </details>
+                        </li> -->
+                    </ul>
+                </details>
+                        </li>
+                        <li>
+                            <details>
+                                <summary>
+                                  <span class='clickable'>// ⤵️ Older Work //</span>
                                 </summary>
                                 <ul>
                                     <li><p></p></li>
@@ -377,78 +464,7 @@
                         </li>
                     </ul>
                 </details>
-                <details>
-                    <summary>
-                      <span class='clickable'>// 🔊 sound design //</span>
-                    </summary>
-                    <ul>
-                        <li>
-                            <details>
-                                <summary>
-                                    <span class='clickable'>🧟‍♂️ Zombie Bro</span>
-                                </summary>
-                                <ul>
-                                    <li>
-                                        <p>A feature length film which documents the life of a young girl as she watches her brother slowly infect the entire world with a zombie virus.</p>
-                                        <p><em>Dir: May Grehan, 2019</em></p>
-                                    </li>
-                                    <li class="pics">
-                                        <img src='images/ZB/zb1.gif' alt="">
-                                        <img src='images/ZB/zb2.gif' alt="">
-                                        <img src='images/ZB/zb3.gif' alt="">
-                                    </li>
-                                    <li>
-                                        <iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/566399100&color=%23d685b1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-                                    </li>
-                                </ul>
-                            </details>
-                        </li>
-                        <li>
-                            <details>
-                                <summary>
-                                    <span class='clickable'>🐈 Sweep</span>
-                                </summary>
-                                <ul>
-                                    <li>
-                                        <p>An endearing animated short in which a young chimney sweep must retrieve a lost cat.</p>
-                                        <p><em>Dir: Keeley Kirshaw, 2017</em></p>
-                                    </li>
-                                    <li>    
-                                        <iframe src="https://player.vimeo.com/video/247899825" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                                    </li>
-                                </ul>
-                            </details>
-                        </li>
-                        <li>
-                            <details>
-                                <summary>
-                                    <span class='clickable'>🌳 Hunter</span>
-                                </summary>
-                                <ul>
-                                    <li>
-                                        <p>A short film about the adventures of a young boy who finds a friend.</p>
-                                        <p><em>Dir: Sam Graydon, 2016</em></p>
-                                    </li>
-                                    <li><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/567498327&color=%23769fc4&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></li>
-                                </ul>
-                            </details>
-                        <!-- </li>
-                         <li>
-                            <details>
-                                <summary>
-                                    <span class='clickable'>📦 Unity Project</span>
-                                </summary>
-                                <ul>
-                                    <li>
-                                        <p>A demo Unity project outfitted with custom sound effects.</p>
-                                        <p><em>Prefabs + Scripts provided, Sound Design + Implementation by me</em></p>
-                                    </li>
-                                    <li><a href='https://oscarj.itch.io/unity-sound-design-demo' class="clickable">[Play It]</a></li>
-                                </ul>
-                            </details>
-                        </li> -->
-                    </ul>
-                </details>
+                
                 <details>
                     <summary>
                       <span class='clickable'>// 🎵 music //</span>
@@ -502,7 +518,7 @@
                     </ul>
                 </details>
                 <div class="links">
-                    //<address><a href="mailto:oscarj.sounds@gmail.com" class='clickable'> ✉️ </a></address>//<a href="https://www.twitter.com/oscarno_" class="clickable"> 🦜 </a> //<a href="https://www.instagram.com/oscarno_/" class="clickable"> 📷 </a>//<a rel="me" href="https://mastodon.social/@oscarno" class="clickable">🦣</a> //
+                    //<address><a href="mailto:oscarj.sounds@gmail.com" class='clickable'> ✉️ </a></address>//<a href="https://bsky.app/profile/oscarno.bsky.social" class="clickable"> 🦋 </a>//
                 </div>
                 <footer><p>// code by me :) // (c) Oscar Jemmott, 2019 //</p></footer>
             </div>
